--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ body {
   #main-header h1 {
     font-size: 48px; /* Adjust the font size for smaller screens */
     line-height: 1.2em; /* Adjust the line height for better readability */
-    word-spacing: 20px; /* Reset the word spacing */
+    word-spacing: -40px; /* Reset the word spacing */
   }
 
   #main-header h1 span.special-span {
@@ -141,5 +141,12 @@ body {
 
   .image-container {
     margin-top: 30px; /* Adjust the margin for smaller screens */
+  }
+}
+
+/* Media query for mobile devices */
+@media screen and (max-width: 480px) {
+  #main-header h1 {
+    word-spacing: -40px; /* Adjust the value to your liking */
   }
 }
