--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ body {
   #main-header h1 {
     font-size: 48px; /* Adjust the font size for smaller screens */
     line-height: 1.2em; /* Adjust the line height for better readability */
-    word-spacing: 20px; /* Reset the word spacing */
+    word-spacing: normal; /* Reset the word spacing */
   }
 
   #main-header h1 span.special-span {
@@ -145,7 +145,11 @@ body {
 }
 
 @media screen and (max-width: 480px) {
+  .container {
+    width: 100%; /* Adjust the container width to fill the entire viewport */
+  }
+  
   #main-header h1 {
-    word-spacing: 20px; /* Adjust the value to your liking */
+    word-spacing: normal; /* Adjust the value to your liking */
   }
 }
