--- a/about/assets/css/style.css
+++ b/about/assets/css/style.css
@@ -73,9 +73,9 @@ body {
     letter-spacing: 1px;
     word-spacing:  0px;
     top:0;
-    right:0;
-    transform: rotate(90deg) translateY(-112%) translateX(190%);
-  }  
+    right:0;               /* Y = horizontal, X = vertical */
+    transform: rotate(90deg) translateY(-132%) translateX(35%);
+  }                  /* original Y(-112%) X(190) */
   
   #main-header h1 span.subtitle-span {   /* Need to configue; */
     position: center;
@@ -85,39 +85,35 @@ body {
     top:0;
     right:0;
   }  
-  
-  .image-container {
-    text-align: center;
-    margin-top: 50px;
+
+
+  .about-container {
+    font-family: 'Source Code Pro';
+    color: black;
+    text-transform: uppercase;
+    font-size: 14px;
+  }
+
+  .team-container {
+    font-family: 'Source Code Pro';
+    color: black;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-top: 20px; /* Add spacing between the text and images */
   }
   
-  .image-container img {
-    max-width: 100%;
-    height: auto;
+  .team-member {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px; /* Add space between team members */
   }
   
-  .image-container {
-    -webkit-animation: squiggly-anim 0.34s linear infinite;
-            animation: squiggly-anim 0.34s linear infinite;
+  .team-member img {
+    width: 400px; /* Set the desired width for all images */
+    height: auto; /* Maintain the aspect ratio */
+    margin-right: 10px; /* Add spacing between the image and text */
   }
   
-  @keyframes squiggly-anim {
-    0% {
-      filter: url("#squiggly-0");
-    }
-    25% {
-      filter: url("#squiggly-1");
-    }
-    50% {
-      filter: url("#squiggly-2");
-    }
-    75% {
-      filter: url("#squiggly-3");
-    }
-    100% {
-      filter: url("#squiggly-4");
-    }
-  }
   
   /* Add a media query for screens with a maximum width of 600px (adjust the value as needed) */
   @media screen and (max-width: 600px) {
@@ -147,11 +143,9 @@ body {
       display: none; /* Hide the special span element on smaller screens */
     }
   
-    .image-container {
-      margin-top: 30px; /* Adjust the margin for smaller screens */
-    }
   }
   
+
   @media screen and (max-width: 480px) {
     #main-header h1 {
       /* word-spacing: 10px; */ /* Adjust the value to your liking */
