adusted font news-container

--- a/news/assets/css/style.css
+++ b/news/assets/css/style.css
@@ -93,6 +93,11 @@ body {
     font-size: 14px;
   }
   
+  .news-container p {
+    font-size: 14px;
+  }
+
+
   .image-container {
     text-align: center;
     margin-top: 50px;
