added gif image, title image, background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #FFFEF2;
+  background-color: #252e13;
   font-family: 'Source Code Pro', Arial, Helvetica;
   margin: 0;
 }
@@ -33,14 +33,14 @@ body {
 
 #navbar a {
   font-family: 'Source Code Pro';
-  color: black;
+  color: white;
   text-transform: uppercase;
   font-size: 28px;
 }
 
 #main-header {
   font-family: 'Source Code Pro';
-  color: black;
+  color: white;
   text-align: left;
   text-transform: uppercase;
   font-size: 70px;
@@ -96,28 +96,6 @@ body {
   height: auto;
 }
 
-.image-container {
-  -webkit-animation: squiggly-anim 0.34s linear infinite;
-          animation: squiggly-anim 0.34s linear infinite;
-}
-
-@keyframes squiggly-anim {
-  0% {
-    filter: url("#squiggly-0");
-  }
-  25% {
-    filter: url("#squiggly-1");
-  }
-  50% {
-    filter: url("#squiggly-2");
-  }
-  75% {
-    filter: url("#squiggly-3");
-  }
-  100% {
-    filter: url("#squiggly-4");
-  }
-}
 
 /* Add a media query for screens with a maximum width of 600px (adjust the value as needed) */
 @media screen and (max-width: 600px) {
