--- a/contact/assets/css/style.css
+++ b/contact/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #FFFEF2;
+    background-color: #252e13;
     font-family: 'Source Code Pro', Arial, Helvetica;
     margin: 0;
   }
@@ -33,14 +33,14 @@ body {
   
   #navbar a {
     font-family: 'Source Code Pro';
-    color: black;
+    color: white;
     text-transform: uppercase;
     font-size: 28px;
   }
   
   #main-header {
     font-family: 'Source Code Pro';
-    color: black;
+    color: white;
     text-align: left;
     text-transform: uppercase;
     font-size: 70px;
